--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "server": "node index.js",
-    "test": "nodemon index.js",
-    "testing": "testing one two one two"
+    "test": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
